[package]
name = "country-counter-spin"
authors = ["Piotr Sarna <sarna@chiselstrike.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.3.0" }
#dev: libsql-client = { path = "../libsql-client-rs", default-features = false, features  = ["spin_backend", "mapping_names_to_values_in_rows"] }
libsql-client = { git = "https://github.com/libsql/libsql-client-rs", version = "0.30", default-features = false, features = [
    "spin_backend",
    "mapping_names_to_values_in_rows"
]}
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
serde_json = "1.0.96"
url = "2.4.0"

[workspace]
